--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node models/seeds/categorySeeder.js"
+    "seed": "node models/seeds/categoriesSeeder.js && node models/seeds/expensesSeeder.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.4",
     "mongoose": "^6.0.12",
