--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.4",
+    "method-override": "^3.0.0",
     "mongoose": "^6.0.12",
     "mongoose-auto-increment": "^5.0.1"
   }
