--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express-session": "^1.17.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.0.12",
-    "mongoose-auto-increment": "^5.0.1"
+    "mongoose-auto-increment": "^5.0.1",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0"
   }
 }
