--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node models/seeds/categoriesSeeder.js && node models/seeds/expensesSeeder.js"
+    "seed": "node models/seeds/categoriesSeeder.js && node models/seeds/expensesSeeder.js",
+    "clearDB": "node models/seeds/clearDB.js"
   },
   "keywords": [],
   "author": "",
